﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.15...]
### 2021-01-29
	Removed: I/O priority support. This was only possible in Win7 and that OS is no longer supported.

## [0.14...]
### 2021-01-11
	Changed: Volume adjusts do not respect log adjusts setting.
### 2020-11-16
	Changed: Removed the deprecated Serilog.RollingFile dependency and moved to use Serilog.File for the same purpose.
	Changed: Unique crash logs are now enforced. The option to have non-unique crash logs has been removed.
### 2020-10-06
	Changed: Internet outage notification has longer cooldown. TODO: Make this configurable.
### 2020-08-29
	Fixed: Win7 was reported as only supported platform in app.config when this had not been the case for a while (Win10 is now that).
	Fixed: Problems enabling audio control.
	Fixed: Updated code to correctly operate in 64 bit mode and not in legacy 32 bit mode. (reported by Chairkicker Nick as problems with power manager)
	Internal: Various adjustments that should not affect end-users.
### 2020-07-08
	Changed: Reduce some debug output.
### 2020-07-07
	Fixed: Network status logging was not ignoring duplicate reports properly.
	Changed: Attempt to make things smarter with audio device handling.
### 2020-06-29
	Fixed: DynDNS debug output was confused.
	Removed: Don't complain about watchlist rules with insufficient actions. This was done poorly.
	Removed: Don't complain about bad devices by default. Requires audio debug now. Only number of bad devices are output normally.
### 2020-06-26
	Fixed: Smart path didn't format non-filtered paths correctly due to peculiarity of System.IO.Path.Combine.
	Fixed: DNS update failed if it was not previously reported.
### 2020-06-12
	Fixed: Volume adjustments now properly format path as per watchlist rules in all circumstances.
	Fixed: Error when manual control is used in power manager.
### 2020-06-07