@@ -13,9 +13,9 @@ using System.Runtime.CompilerServices;
 
 [assembly: ComVisible(false)]
 
-[assembly: AssemblyVersion("0.14.*")] // FIXME: Get this somehow from the solution settings?
+[assembly: AssemblyVersion("0.15.*")] // FIXME: Get this somehow from the solution settings?
 #pragma warning disable CS7035 // a.b.c.d versioning warning
-[assembly: AssemblyFileVersion("0.14.*")]
+[assembly: AssemblyFileVersion("0.15.*")]
 [assembly: System.Resources.NeutralResourcesLanguage("en")]
 [assembly: Guid("088f7210-51b2-4e06-9bd4-93c27a973874")] // this is pointless, yes?
 
